Issue 22: Expand all collapsed rows: Implemented monitoring for the 'collapsed' state: check for `collapsedRows` after each change and update `.compare.has-collapsed` css class.

--- a/bw_matchbox/assets/css/compare.css
+++ b/bw_matchbox/assets/css/compare.css
@@ -8,14 +8,18 @@
   --compare-selected-animation-time: 3s;
 }
 
+/* Root node */
+.compare.has-collapsed {
+  /* border: 1px solid red; */
+}
+
+/* Compare tables layout */
 .compare .compare-tables {
   width: 100%;
 }
-
 .compare .compare-tables > .column {
   position: relative;
 }
-
 .compare .compare-tables > .column + .column {
   /* Tables spacing */
   margin-left: 15px;
